<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/systemsetting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    android:orientation="vertical" >

    <include
        android:id="@+id/home_title"
        layout="@layout/app_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/me_rl_message"
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="是否开启连拍模式"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox_burst_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:gravity="center"
                android:text="@string/system_setting_photo_select"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/rg_setting_copyOrPaste"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:ems="10"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_copy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/system_setting_copy"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_paste"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/system_setting_paste"
                    android:textSize="14sp" />
            </RadioGroup>
            <!--
                <Spinner
                android:id="@+id/et_setting_copyOrPaste"
                android:layout_width="180dp"
                android:layout_height="40dip"
                android:layout_marginLeft="4dp"
                android:ems="10"
                android:textSize="14sp" />
            -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:gravity="center"
                android:text="@string/system_setting_camer_select"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/rg_setting_photo"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:ems="10"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_custom_camer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/system_setting_custom_camer"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_original_camer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/system_setting_original_camer"
                    android:textSize="14sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:text="最大图片大小"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_setting_maximagesize"
                android:layout_width="180dp"
                android:layout_height="40dip"
                android:layout_marginLeft="4dp"
                android:background="@drawable/bg_edit_sys_setting"
                android:ems="10"
                android:numeric="integer"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:text="(M)"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:text="提交重复次数"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_setting_repeattime"
                android:layout_width="180dp"
                android:layout_height="40dip"
                android:layout_marginLeft="4dp"
                android:background="@drawable/bg_edit_sys_setting"
                android:ems="10"
                android:numeric="integer"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:text="(次)"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:text="容量小于提示"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_setting_size"
                android:layout_width="180dp"
                android:layout_height="40dip"
                android:layout_marginLeft="4dp"
                android:background="@drawable/bg_edit_sys_setting"
                android:ems="10"
                android:numeric="integer"
                android:singleLine="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:text="(M)"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_changesubmit"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="@drawable/btn_operat"
                android:text="保存"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>